crates/biome_cli/tests/snapshots/main_cases_yaml/format_yaml_files_with_indent_width_cli_option.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write --yaml-formatter-indent-width 4 file.yaml
```

## `file.yaml`

```yaml
root:
    - item

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
