crates/biome_cli/tests/snapshots/main_cases_yaml/format_yaml_files_with_indent_width_override.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome format --write file.yaml special/file.yml
```

## `biome.json`

```json
{
  "yaml": {
    "formatter": {
      "indentWidth": 2
    }
  },
  "overrides": [
    {
      "includes": ["special/**"],
      "yaml": {
        "formatter": {
          "indentWidth": 4
        }
      }
    }
  ]
}
```

## `file.yaml`

```yaml
root:
  - item

```

## `special/file.yml`

```yml
root:
    - item

```

# Emitted Messages

```block
Formatted 2 files in <TIME>. Fixed 2 files.
```
